--- a/site/src/index.html
+++ b/site/src/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Alskom-Vita</title>
+    <title>Alskom | Vita</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="assets/styles/loader.css"/>
 </head>
 <body id="nglpage">
-<app-root></app-root>
+<app-root>
+    <div class="loading">Страница загружается&#8230;</div>
+</app-root>
 </body>
 </html>
